--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" type="text/css" href="_bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/logo.jpg" alt="Logo ficticia" width="100px" height="80px">
+        </a>
+    </nav>
 </body>
 </html>
