--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-            <img src="img/logo.jpg" alt="Logo ficticia" width="100px" height="80px">
+            <img src="img/logo.jpg" alt="Logo ficticia" width="100px" height="80">
         </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Quem somos</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Parceiros</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Serviços</a> 
+                </li>
+            </ul>
+        </div>
     </nav>
 </body>
 </html>
