--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light"> <!--Essa classe do bootstrap, deixa o menu alinhado-->
         <a class="navbar-brand" href="#">
             <img src="img/logo.jpg" alt="Logo ficticia" width="100px" height="80">
         </a>
@@ -27,5 +27,11 @@
             </ul>
         </div>
     </nav>
+
+    <section id="quemsomos">
+        <div class="container-fuid quem-somos text-center margin"> <!--container-fuid, cria um container que ocupa todo o espaço-->
+            <p>Teste</p>
+        </div>
+    </section>
 </body>
 </html>
