--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light"> <!--Essa classe do bootstrap, deixa o menu alinhado-->
         <a class="navbar-brand" href="#">
-            <img src="img/logo.jpg" alt="Logo ficticia" width="100px" height="80">
+            <img src="img/logo3.jpg" alt="Logo ficticia" width="100px" height="80">
         </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Quem somos</a> 
+                    <a class="nav-link" href="#quemsomos">Quem somos</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Parceiros</a> 
@@ -30,7 +30,27 @@
 
     <section id="quemsomos">
         <div class="container-fuid quem-somos text-center margin"> <!--container-fuid, cria um container que ocupa todo o espaço-->
-            <p>Teste</p>
+            <h3 class="margin">Quem somos</h3>
+            <img src="img/time.jpg" class="rounded-circle" width="400px" height="400px"> 
+            <h3>Somos um time comprometidos com o resultado!</h3>
+        </div>
+    </section>
+    <section id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+            <h3>Parceiros</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 ">
+                        <img src="img/parceiros.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/parceiros.jpg"width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/parceiros.jpg"width="100%">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
