--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <a class="nav-link" href="#quemsomos">Quem somos</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a> 
+                    <a class="nav-link" href="#parceiros">Parceiros</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a> 
+                    <a class="nav-link" href="#seriços">Serviços</a> 
                 </li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
     </section>
     <section id="parceiros">
         <div class="container-fluid text-center margin parceiros">
-            <h3>Parceiros</h3>
+            <h3 class="margin">Parceiros</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 ">
@@ -53,5 +53,31 @@
             </div>
         </div>
     </section>
+
+    <section id="serviços">
+        <div class="container-fluid text-center margin servcos">
+            <h3 class="margin">SERVIÇOS</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iure nulla magni.</p>
+                        <img src="img/app.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam minima inventore laborum</p>
+                        <img src="img/site.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis molestias ipsum volupta.</p>
+                        <img src="img/site2.jpg" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>&copyDesenvolvido por CarWen.</p>
+    </footer>
 </body>
 </html>
